2023/03/08 회원가입 유효성검사 중

--- a/Spring/Photostagram/src/main/resources/static/css/member.css
+++ b/Spring/Photostagram/src/main/resources/static/css/member.css
@@ -554,3 +554,7 @@ option {
 .footBtwrap>li>button{display: block; width: 100%;height: 100%; font-size: 20px;text-align: center;line-height: 60px;}
 .fpmgBt1{background-color: #fff;color:#888}
 .fpmgBt2{background-color: lightsalmon;color: #fff}
+
+.chkUid {
+    float: right;
+}
