--- a/Spring/Photostagram/src/main/resources/templates/member/email.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/email.html
@@ -41,7 +41,7 @@ $(function(){
                             </form>     
                             <div class="birth">
                                 <div>
-                                    <a href="./birth.html">돌아가기</a>
+                                    <a th:href="@{/member/birth}">돌아가기</a>
                                 </div>
                             </div>                     
                         </div>
@@ -49,7 +49,7 @@ $(function(){
                     <div class="box goto">
                         <p>
                             계정이 있으신가요?
-                            <a href="./login.html">로그인</a>
+                            <a th:href="@{/member/login}">로그인</a>
                         </p>
                     </div>
                     <div class="app-download">
