--- a/Spring/Photostagram/src/main/resources/templates/layout/memberLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/memberLayout.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Photostagram::login</title>
+  <title>Photostagram</title>
   <link rel="shortcut icon" th:href="@{/img/favicon.png}" type="image/png">
   <!-- 구글 폰트 -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
