--- a/Spring/Photostagram/src/main/resources/templates/member/register.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/register.html
@@ -6,8 +6,34 @@
 <th:block layout:fragment="main">
 <script>
     $(function(){
-        $('#signin-btn').click(function(e){
+
+        let userNameChk = false;
+        let nameChk = false;
+        let emailChk = false;
+        let passwordChk = false;
+
+        $('#userName').keyup(function() {
+            let username = $('input[name=username]').val();
+
+            $.ajax({
+                url: '/Photostagram/member/chkUserName',
+                type: 'POST',
+                data: {username : username},
+                success: function(data) {
+                    if(data.result = 1) {
+                        alert('이미 사용중인 아이디입니다.');
+                        userNameChk = true;
+                    } else {
+                        alert('사용 가능한 아이디입니다.');
+                        userNameChk = false;
+                    }
+                }
+            });
+        });
+
+        $('#register-btn').click(function(e){
             e.preventDefault();
+
             alert('register!!!');
             let username = $('input[name=username]').val();
             let name = $('input[name=name]').val();
@@ -55,7 +81,8 @@
                                         <span>
                                             아이디 입력
                                         </span>
-                                        <input type="text" name="username">
+                                        <span class="chkUid"></span>
+                                        <input type="text" name="username" class="able" id="userName">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -71,7 +98,7 @@
                                         <span>
                                             이메일 입력
                                         </span>
-                                        <input type="text" name="email">
+                                        <input type="text" name="email" class="able">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -79,13 +106,13 @@
                                         <span>
                                             비밀번호
                                         </span>
-                                        <input type="password" name="password">
-                                        <button>비밀번호 표시</button>
+                                        <input type="password" name="password" class="able">
+                                        <button type="button" class="passView">비밀번호 표시</button>
                                     </div>
                                 </div>
                                 <div class="btn-group">
-                                    <button type="submit" class="btn-login" id="signin-btn">
-                                        가입
+                                    <button type="submit" class="btn-login" id="register-btn" disabled>
+                                        다음
                                     </button>
                                 </div>
                                 <div class="checking">
