--- a/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
@@ -138,7 +138,7 @@
 
             <div class="searchListAll">
                 <div class="searchlist">
-                    <a>
+                    <a th:href="@{#}">
                         <div>
                             <img th:src="@{/img/hashtag.PNG}" alt="">
                         </div>
