--- a/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
@@ -22,53 +22,11 @@
     <link rel="stylesheet" th:href="@{/css/profile.css}"/>
     <link rel="stylesheet" th:href="@{/css/profileModify.css}"/>
     <link rel="stylesheet" th:href="@{/css/post.css}"/>
-    <script th:src="@{/js/aside.js}" th:inline="javascript"></script>
+    <script th:src="@{/js/aside.js}"></script>
     <script th:src="@{/js/proFollow.js}"></script>
     <script th:src="@{/js/proPreview.js}"></script>
     <script th:src="@{/js/proUpload.js}"></script>
     <script th:src="@{/js/post.js}"></script>
-    <script>
-      $(function(){
-        //게시글 업로드 버튼 클릭시(ajax추가하면 됨)
-      $('#button_write_feed').on('click', ()=>{
-        const image = $('#input_image').css("background-image").replace(/^url\(['"](.+)['"]\)/, '$1');
-        const content = $('#input_content').val();
-        const profile_image = $('#input_profile_image').attr('src');
-        const user_id = $('#input_user_id').text();
-
-        const file = files[0];
-
-        let fd = new FormData();
-
-        fd.append('file', file);
-        fd.append('image', image);
-        fd.append('content', content);
-        fd.append('profile_image', profile_image);
-        fd.append('user_id', user_id);
-
-        if(image.length <= 0)
-        {
-            alert("이미지가 비어있습니다.");
-        }
-        else if(content.length <= 0)
-        {
-            alert("설명을 입력하세요");
-        }
-        else if(profile_image.length <= 0)
-        {
-            alert("프로필 이미지가 비어있습니다.");
-        }
-        else if(user_id.length <= 0)
-        {
-            alert("사용자 id가 없습니다.");
-        }
-        else{
-            writeFeed(fd);
-            console.log(files[0]);
-        }
-      });
-      });
-    </script>
 </head>
 <body>
     <main>
