--- a/HTML/css/chat.css
+++ b/HTML/css/chat.css
@@ -416,9 +416,9 @@ li > img{
     vertical-align: baseline;
     white-space: pre;
 }
-
+/**/
 .new-wrap{
-    background-color:rgba(0,0,0,.3);
+    background-color:rgba(0,0,0,.6);
     justify-content: center;
     align-items: center;
     position: fixed;
@@ -430,18 +430,106 @@ li > img{
     padding: 15px;
 }
 
-.new-head{
+.new-content{
     width: 400px;
+    height: 601px;
+    border-radius: 10px;
+    overflow: hidden;
+    background-color:#ffffff;
+        
+}
+/* 모달 헤드 부분 */
+.new-head{
+    display: flex;
+    border-bottom: 0.5px solid #dbdbdb;
     height: 42px;
 }
 
-.new-close{
-    width: 52px;
-    height: 100%;
-    float: left;
+.new-head-close{
+    flex: 1;
+    padding: 13px;
 }
 
-.new-close img{
+.new-head-close img{
     width: 18px;
     height: 18px;
+}
+
+.new-head-mesg{
+    flex: 3;
+    text-align: center;
+    width: 240px;
+    height: 42px;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 11px;
+}
+
+
+.new-head-next{
+    flex: 1;
+    text-align: right;
+    padding: 12px 16px;
+}
+
+.btn-next{
+    float: right;
+    border:none;
+    background-color:transparent;
+    color: #4db5f9;
+    font-size: 15px;
+}
+
+/* 모달 받는 사람 검색창 */
+.new-body1{
+    align-items: stretch;
+    border: 0;
+    border-bottom: 1px solid rgb(var(--ig-separator));
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    font: inherit;
+    font-size: 100%;
+    margin: 0;
+    max-height: 50%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    padding: 0;
+    position: relative;
+    vertical-align: baseline;
+}
+
+.new-body1-1{
+    align-items: stretch;
+    border: 0;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    flex-shrink: 0;
+    flex-wrap: wrap;
+    font: inherit;
+    font-size: 100%;
+    margin: 0;
+    margin-bottom: 8px;
+    margin-top: 8px;
+    max-height: 250px;
+    padding: 0;
+    position: relative;
+    vertical-align: baseline;
+}
+
+.new-body1-2{
+    display: flex;
+    flex: 0 0 auto;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: stretch;
+    box-sizing: border-box;
+    position: relative;
+    padding: 4px 12px 4px 12px;
+}
+
+.new-body1-3{
+
 }
