--- a/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
@@ -27,6 +27,7 @@
     <script th:src="@{/js/proPreview.js}"></script>
     <script th:src="@{/js/proUpload.js}"></script>
     <script th:src="@{/js/post.js}"></script>
+    <script th:src="@{/js/counting.js}"></script>
 </head>
 <body>
     <main>
