--- a/Spring/Photostagram/src/main/resources/templates/profile/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/index.html
@@ -11,18 +11,18 @@
                       <th:block th:if="${#strings.equals(myName, username)}">
                         <input type="file" class="real-addProf" accept="image/*" style="display: none;"/>
                           <th:block th:if="${not #strings.isEmpty(user.profileImg)}">
-                              <img th:src="|@{/}thumb/${user.profileImg}" alt="profile" class="addProf"/>
+                              <img th:src="|@{/}thumb/${user.profileImg}" alt="profile" class="addProf" id="profilePhoto"/>
                           </th:block>
                           <th:block th:unless="${not #strings.isEmpty(user.profileImg)}">
-                              <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile" class="addProf"/>
+                              <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile" class="addProf" id="profilePhoto"/>
                           </th:block>
                       </th:block>
                       <th:block th:unless="${#strings.equals(myName, username)}"></th:block>
                           <th:block th:if="${not #strings.isEmpty(user.profileImg)}">
-                              <img th:src="|@{/}thumb/${user.profileImg}" alt="profile"/>
+                              <img th:src="|@{/}thumb/${user.profileImg}" alt="profile" id="profilePhoto"/>
                           </th:block>
                           <th:block th:unless="${not #strings.isEmpty(user.profileImg)}">
-                              <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile"/>
+                              <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile" id="profilePhoto"/>
                           </th:block>
                       </div>
                   </div>
@@ -33,8 +33,12 @@
                               <a th:href="@{/profile/modify}" class="button">프로필 편집</a>
                           </th:block>
                           <th:block th:unless="${#strings.equals(myName, username)}">
-                              <a href="#" class="button" id="follow">팔로우</a>
-                              <a href="#" class="button" id="following">팔로잉</a>
+                              <th:block th:if="${result} > 0">
+                                  <a th:href="@{/profile/follow (type=delete, userName=${username}, myName=${myName})}" class="button" id="following">팔로잉</a>
+                              </th:block>
+                              <th:block th:unless="${result} > 0">
+                                  <a href="#" class="button" id="follow">팔로우</a>
+                              </th:block>
                           </th:block>
 
                       </div>
@@ -43,10 +47,10 @@
                               게시물<span>[[${post}]]</span>
                           </li>
                           <li>
-                              팔로워<span>[[${follower}]]</span>
+                              <a id="followModal">팔로워<span>[[${myFollower}]]</span></a>
                           </li>
                           <li>
-                              팔로잉<span>[[${following}]]</span>
+                              <a id="followingModal">팔로잉<span>[[${myFollowing}]]</span></a>
                           </li>
                       </ul>
                       <p class="pAbout">
@@ -118,10 +122,20 @@
                     </div>
                     <ul id="fBottom">
                         <li><a href="#" class="fClose"><span>친한 친구 리스트에 추가</span><i class="fa-solid fa-star"></i></a></li>
-                        <li><a href="#" class="fClose"><span>즐겨찾기에에 추가</span><i class="fa-regular fa-star"></i></a></li>
+                        <li><a href="#" class="fClose"><span>즐겨찾기에 추가</span><i class="fa-regular fa-star"></i></a></li>
                         <li><a href="#" class="fClose"><span>일시 차단</span><i class="fa-solid fa-chevron-right"></i></a></li>
                         <li><a href="#" class="fClose"><span>제한</span><i class="fa-solid fa-chevron-right"></i></a></li>
-                        <li ><a href="#" id="unFollow" class="fClose">팔로우 취소</a></li>
+                        <li><a th:href="@{/profile/follow (type=insert, userName=${username}, myName=${myName})}" id="unFollow" class="fClose">팔로우 취소</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div id="followers" class="follower-modal">
+                <div class="fList">
+                    <ul>
+                        <li>
+                            <a href="#"><img src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"/></a>
+                            <a href="#">user</a>
+                        </li>
                     </ul>
                 </div>
             </div>
